# ChangeLog for media-libs/alure
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/alure/ChangeLog,v 1.6 2011/11/02 14:54:37 phajdan.jr Exp $

  02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> alure-1.2.ebuild:
  x86 stable wrt bug #388577

  29 Oct 2011; Markos Chandras <hwoarang@gentoo.org> alure-1.2.ebuild:
  Stable on amd64 wrt bug #388577

*alure-1.2 (22 Aug 2011)

  22 Aug 2011; Tim Harder <radhermit@gentoo.org> +alure-1.2.ebuild:
  Version bump. Add examples USE flag.

*alure-1.1 (11 Apr 2011)

  11 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> +alure-1.1.ebuild:
  Version bump.

  27 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> alure-1.0.ebuild:
  amd64 stable and fix documentation directory wrt #300514 by Diego E.
  Pettenò.

*alure-1.0 (13 Dec 2009)

  13 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> +alure-1.0.ebuild,
  +files/alure-1.0-gcc44.patch, +files/alure-1.0-multilib.patch:
  Initial commit (media-libs/freealut replacement) wrt #296116, thanks to
  Azamat H. Hackimov.
