@@ -1,7 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX libexif-0.6.13-pkgconfig.patch 402 RMD160 269822b19acf52a1be773e64fcf72f5480155e89 SHA1 82646a34866ebaf2c9cb47c925f7fca0b17c501d SHA256 9986246ab56eb294bd93eada0847f3141beed90f23f5711f4ff0f696f38f2def
 DIST libexif-0.6.19.tar.bz2 1142963 RMD160 c17549ffbcef7d416c17a60cbd6877317e0c5442 SHA1 820f07ff12a8cc720a6597d46277f01498c8aba4 SHA256 f97695261cc269c2d370ea1737985feaa8b4cadf34b8839005930afdd701cabd
 DIST libexif-0.6.20.tar.bz2 1412921 RMD160 87d952677a02a788211b1f2e02f49d2264c22b5c SHA1 d7cce9098169269695852db20d24350c2d3c10fe SHA256 a772d20bd8fb9802d7f0d70fde6ac8872f87d0c66c52b0d14026dafcaa83d715
 EBUILD libexif-0.6.19.ebuild 1140 RMD160 f31043bee0a467c1ba19a51eaa6b8238367f954a SHA1 9b38ba6e83642d5bb6068ca5d12799c6b754c70b SHA256 c33452c1a13462ca1a98a0b880d966cdff9bf477a1e11808538793e5fdddd96a
-EBUILD libexif-0.6.20.ebuild 1170 RMD160 b8f80575e4e13e241d384c9614539908207be879 SHA1 26c2d3a0c7e41a8352241de1fe727c7a1f9319a0 SHA256 0234a7293bde1c7729f7d60c092be668853edeb4668cec03be99961fc1202408
-MISC ChangeLog 18168 RMD160 eef5057b2eb2f3f9f3fb57c987ec5339e030a45f SHA1 087fb3176eda769e857796ac38dbd1efb137f679 SHA256 49c651b8b9ac09b0284d2373f86223a770654526ac56c0f05cc3124bc7aebbf5
+EBUILD libexif-0.6.20.ebuild 1172 RMD160 6800efbfc4f09f2c729f77c3f5670fbe31801c53 SHA1 0a06ec97bd586992623c36fa798d02fa58001c92 SHA256 46cac781eaab367fd114bcccd1b5b8b6fba51984e472061ed1938ec1432c902d
+MISC ChangeLog 18276 RMD160 328c52319c2cff191b7c1329a40ab1ef4df46c98 SHA1 92473310d2f3347b5f82915afd6c306821a14fc4 SHA256 16e775f59185288af436ce3af70fe014e7040b5fd656f1c82104e8d7c6e80671
 MISC metadata.xml 161 RMD160 60f70b15d67f0e6aafc59833b2f0a30e30b51765 SHA1 1c35398222ef7ed670c31965e42cca77fe4b1da6 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPUTK3AAoJEEdUh39IaPFNYBwH/3JWbEdk2q4CvbuI/V8dFbmO
+KerKOE1k7xW3wU9oZx728KtS/jiJFQMp0m+o4UXMn/nywsbvyC/6PahsOYHd4JWh
+xTA3tGyeGr1bOK4Yh2VQexYXWKnW2JxRVJUGbJD13C2s5OK0ic2ubx2nLUEM6SVK
+eaQgf+JQPXPlzeQvEIHQztVV5x8LbkysO0wKTEd/7nFO6LZj15u+kZyGyWgKEtwg
+Mg+NiUaQ+39gw0ZPQzlw0I0gGQxmO36btvqVd3lnhMhvN7ev6wsz1wlprnI+KRhG
+prAS/3+3D2emGuCU8SvuUCzlnWl5cI3SvOGGdGIKJqz4WEvg+vsFZyShmGn4lFw=
+=uErk
+-----END PGP SIGNATURE-----
