@@ -6,13 +6,17 @@ DIST openal-soft-1.12.854.tar.bz2 104008 RMD160 5cf3b2db7a1aae4d24fc4f5c3074332c
 DIST openal-soft-1.13.tar.bz2 113770 RMD160 30cde50ae088f687b63bfd742518fef4ce213629 SHA1 0e2449375a12cee65a9cea354533dcaabf9d5068 SHA256 dc735b8b2ab21f6ec54b4262f150a7e0527ae42aa975a1965b9342df1520443c
 EBUILD openal-1.11.753.ebuild 1020 RMD160 9df0e7396d8c6bb1f7bb0cac018f4b704fdca60a SHA1 a668ad6444d2c952e7a8ab2b6abb113713ebec3b SHA256 9ed8082ff0c9095babfad6d086c4e5597503b9dbea2dc83b45e52d89fa2085df
 EBUILD openal-1.12.854.ebuild 1038 RMD160 46261162f9f09d977a8d65386237ec16a5765c59 SHA1 dc56271d211411b5671e54ddb055c17bd4aad4d7 SHA256 5d2d028b45454f4917c2a5a999bfaf90cb9d77cd55e1c9eee602908013f67281
-EBUILD openal-1.13.ebuild 1046 RMD160 60faf9f271002f21d5fd2445372a89a1053259bb SHA1 c870748dcad62cb26d2f34f06c04ced0b27c1ca5 SHA256 1fdc8d4254f9d08500db3dd0c14fe4cdcb5f9118fbfa06392eb7ce90624bd4f2
-MISC ChangeLog 20518 RMD160 ab5ea7a6b7483c1a154bf8d55c4e2ef005719bde SHA1 31cb6f8e3608c17bdd39dcd9bce1e41f86aba793 SHA256 034840dd6eb1e3c348dfdff0cbad569c3fd8bfd342fddad2e8b2ffa5720041be
+EBUILD openal-1.13.ebuild 1046 RMD160 dacbd6b149a8f04b53ea10ac55ad35592f39caef SHA1 662ff45daef30e71f2391c8fbf96e2f135aace9c SHA256 a4f14cea54cac9c9a8ea5cfa7259032cc6d62230b64c39b70ed25d5721a7ef89
+MISC ChangeLog 20626 RMD160 fb647505973200b83792f8d10c6270b0c625df08 SHA1 9a2c389042c486a39681f18f9c7baca3cdc4f7a2 SHA256 b2e60941f74858006b72261b104e7611d704d5096fbc42ca30a30afc3b0b0afb
 MISC metadata.xml 159 RMD160 568344dc99ebe68c2e2d43d268d186757532144d SHA1 3f9589301dbaa4363c56de0f309cf792d8c38b63 SHA256 eb5b8cfa9aed067cd72d6439beac2dd0abdba30248f27e4b337012b493a18369
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7RL3wACgkQuQc30/atMkCsSQCgpA85z4P6G123+ReYaZ/PhooI
-5iYAoJT/GPJH0ov+LIEN+sKg7qZ5Jo+A
-=eOMK
+iQEcBAEBAgAGBQJPUTJ7AAoJEEdUh39IaPFNqmsIAJuNhXVFUhvmZ1YwS0KFaX9q
+Si6cOrSk+JZqt+YYk6wWmQRiajq6wmVupESYbwOC1MCk/UccI8oXIx5MQi4ztw8O
+BZbZWVOhG4ClJFnX8bEsQkDWXjfzpMObQ8BA/SwDF86CAxp8U8EYjg+vdWTpdJ/H
+eVMdq2lRyVBdp39Ya6BFrsw/oYxtLD2DYPDtnaEd73PrOYmIm0/HuVC3Ig5+tf3F
+tnc6qmPrgxNCzq3m/y7v3eRBi0VToEmNqeEEP9w5/YvSET55gAi7qXrhRTkdKfqo
+wcz2WepEaZiP0HnEgbrRjU/En7aHAjGZ+9XZO8Qsr7ETszLei8xkUzpc2toSAHM=
+=Us/o
 -----END PGP SIGNATURE-----
