@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/alure
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alure/ChangeLog,v 1.6 2011/11/02 14:54:37 phajdan.jr Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alure/ChangeLog,v 1.7 2012/03/02 20:49:24 ssuominen Exp $
+
+  02 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> alure-1.2.ebuild:
+  Keyword ~ppc/~ppc64 wrt #388577
 
   02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> alure-1.2.ebuild:
   x86 stable wrt bug #388577
